add javadoc-and-jxr.sh and minor improvements